# gamewithpixels-ha

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: hassfest.yml  prepare-release.yml  publish-release.yml  release-drafter.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/pixels_dice/: __init__.py  button.py  config_flow.py  device_trigger.py  manifest.json  sensor.py  switch.py
tests/: conftest.py  test_device_trigger.py  test_sensor.py  test_switch.py
