[project]
name = "gamewithpixels-ha"
version = "1.2.0b1"
requires-python = ">=3.13"    # so uv won’t warn

# Core dependencies for the Home Assistant integration
dependencies = [
    "bleak==0.22.3", # Matching the version in manifest.json
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

pytest_plugins = ["pytest_homeassistant_custom_component"]

[tool.setuptools.packages.find]
# Only look for packages under custom_components/pixels_dice
where = ["custom_components"]
include = ["pixels_dice", "pixels_dice.*"]

[tool.pytest.ini_options]
pythonpath = [".", "custom_components"]
addopts = "--cov=custom_components.pixels_dice --cov-report=term-missing"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "aiousbwatcher>=1.1.1",
    "homeassistant>=2025.4.4",
    "mock>=5.2.0",
    "pyserial>=3.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-homeassistant-custom-component>=0.13.236",
    "serial>=0.0.97",
]
