[project]
name = "gamewithpixels-ha"
version = "1.2.0b3"
requires-python = ">=3.13"    # so uv won’t warn

# Core dependencies for the Home Assistant integration
dependencies = [
    "bleak==0.22.3", # Matching the version in manifest.json
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

pytest_plugins = ["pytest_homeassistant_custom_component"]

[tool.setuptools.packages.find]
# Only look for packages under custom_components/pixels_dice
where = ["custom_components"]
include = ["pixels_dice", "pixels_dice.*"]

[tool.pytest.ini_options]
pythonpath = [".", "custom_components"]
addopts = "--cov=custom_components.pixels_dice --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/ for a full list of rules
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.ruff.lint.flake8-tidy-imports]
# This section is intentionally left blank to allow relative imports.
# The default behavior of ruff is to allow them, which is what we want for Home Assistant custom components.

[dependency-groups]
dev = [
    "aiousbwatcher>=1.1.1",
    "homeassistant>=2025.4.4",
    "mock>=5.2.0",
    "pyserial>=3.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-homeassistant-custom-component>=0.13.236",
    "serial>=0.0.97",
    "ruff>=0.5.5",
]
